# demo-notification

./: .gitignore  Dockerfile  README.md  consumer.py  docker-compose.yml  produser.py  pyproject.toml  rabbitmq-definitions.json  requirements.txt
