[project]
name = "demo-notification"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = ["pika (>=1.3.2,<2.0.0)", "psycopg2 (>=2.9.10,<3.0.0)", "psycopg2-binary (>=2.9.10,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
